updates to manuscript
-updated new section on explanatory, predictive modeling
-reported regression for framework splits in arousal subsection of results
-added some citations to discussion section

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -77,13 +77,9 @@ Across regression and classification paradigms, a wide range of models have been
 
 MER studies apply regression and classification techniques to predict emotion in diverse datasets, using features derived from both music (e.g., audio, MIDI, metadata) and participants (e.g., demographic information, survey responses, physiological signals, etc.). To facilitate model comparison, several databases have been shared publicly, including *MediaEval* [@soleymani2013], *DEAM* [@aljanaki2017developing], and *AMG1608* [@chen2015amg1608]. These datasets predominately use Western pop music, are moderate in size (containing from 744 to 1802 music excerpts) and have been manually annotated by a variable numbers of participants (either by experts, students, or crowdsourced workers). Several publicly available datasets include features analyzed using audio software suites such as *OpenSMILE* [@eyben2010opensmile] and *MIRToolbox* [@lartillot2007matlab] -- enabling predictions from tens, or even hundreds, of audio features.
 
-Large datasets are needed to generalize predictions across diverse samples, especially for deep learning and complex machine-learning models that require extensive pre-training. However, the dataset sizes in MER tend to be modest in comparison, as direct annotation of music examples is resource-intensive. In contrast, datasets in the visual domain are often significantly larger (e.g., *EmoSet* with 118,102 images and *AffectNet* with 450,000, see @yang2023emoset;@mollahosseini2017affectnet). Some efforts have been made to scale up MER datasets by inferring emotions from tags (*MTG-Jamendo* with 18,486 excerpts @bogdanov2019mtg and *Music4all* with 109,269 excerpts @santana2020), but these have not found their way into standard emotion prediction or classification tasks yet.
+An important factor often affecting the size of datasets employed in MER concerns whether they use a *predictive* or *explanatory* modelling framework. Large datasets are necessary in predictive studies, where the predominant goal is to generalize predictions across diverse samples, especially for deep learning and complex machine-learning models that require extensive pre-training. Conversely, small, carefully-curated, datasets are useful when attempting to *explain* how musical factors such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in], affect variance in emotion ratings. In these studies, statistical models serve a different goal. Instead of predicting emotion labels for new music, psychological studies on music emotion test causal theories about the relationship between musical predictors and emotion labels. Whether models serve predictive or explanatory goals is important—affecting both decisions about data curation and modelling, and the models' resultant predictive and explanatory power [@shmueli2010explain].
 
-Although training MER systems with a wide range of stimuli and features can be useful for generalizable modelling, smaller datasets can be more appropriate when greater control over stimuli or features is necessary. For example, @griffiths2021am conducted a study aiming to isolate features optimally predictive for evaluating emotion ratings of music from different genres. Using multiple linear regression, he predicted emotion in 20 tracks from different genres, and validated the model using a separate set of 40 tracks. By preparing the model for a specific predictive context, the study surpassed the performance accuracy of previous benchmark models. In another study, @saizclar2022pr evaluated novel audio-based features in a predictive context, extracting 22 variables derived from onset curves -- changes in the energy of a note starting from its onset -- to predict valence and activation in 40 short (8-12s) piano excerpts. These carefully-designed experiments evaluate specific questions, informing researchers about how models can be designed to perform accurately in diverse prediction tasks. 
-
-Small, carefully-curated, datasets are also useful when attempting to *explain* how musical factors such as amplitude normalization [@gingras2014be] or different performers' interpretations [@battcock2021in], affect variance in emotion ratings. Psychological studies apply similar data collection and modelling procedures to the predictive MER studies summarized above. However, statistical models serve a distinct purpose. Instead of predicting emotion labels for new music, psychological studies on music emotion test causal theories about the relationship between musical predictors and emotion labels. Accurate modelling requires rigorous control of musical parameters and data collection procedures. 
-
-The distinction between predictive and explanatory modelling frameworks is important, as it affects decisions about data curation and modelling, as well the predictive and explanatory power of models [@shmueli2010explain]. However, the interdisciplinary nature of MER means these frameworks can be applied in complementary ways. Emotion constructs applied in predictive MER studies often originate from experimental psychology, such as Russell's circumplex model [@Russell1980] and Hevner's adjective circle [@hevner1936]. Data collected through psychology experiments can also be applied in predictive contexts. For example, @chowdhury2021perceived used data from a previous psychological study of piano performances [@battcock2019ac] as a reference standard when comparing predictive accuracy of feature sets analyzed from audio files, musical scores, or deep neural network feature extractors. Insights from theoretical studies can inform predictive applications as scholars attempt to surpass existing benchmarks for predictive accuracy. 
+In predictive MER tasks, dataset sizes tend to be modest in comparison to other fields, as direct annotation of music examples is resource-intensive. For example, in the visual domain datasets are often significantly larger (e.g., *EmoSet* with 118,102 images and *AffectNet* with 450,000, see @yang2023emoset;@mollahosseini2017affectnet). Some efforts have been made to scale up MER datasets by inferring emotions from tags (*MTG-Jamendo* with 18,486 excerpts @bogdanov2019mtg and *Music4all* with 109,269 excerpts @santana2020), but these have not found their way into standard emotion prediction or classification tasks yet. However, small datasets can also be useful in predictive contexts when greater control over stimuli or features is necessary. These have been useful in applications testing new feature representations [@saizclar2022pr] or identifying relevant features for multi-genre predictions [@griffiths2021am], or as reference standards for comparison with novel feature sets [@chowdhury2021perceived]. Findings from explanatory studies often inform theory-driven applications in predictive tasks, helping improve upon current benchmarks.
 
 ## The current benchmarks of MER
 
@@ -147,7 +143,7 @@ First we describe the overall pattern of data (regression vs. classification, mo
 TABLE 1: Summary of data
 
 |   | Regression | Classification | Total |
-|:---------------|:--------------------|:------------------|:---------------|
+|:----------------|:-------------------|:-----------------|:----------------|
 | Study N | 22 | 12 | 34 |
 | Model N | 204 | 86 | 290 |
 | Techniques | Neural Nets (NN): 64 | 21 | 85 |
@@ -217,7 +213,7 @@ To gain insights into the factors contributing to the wide range of model succes
 
 <!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
-When analyzing the studies across the four modelling techniques used, the prediction do differ significantly (*Q*(3) = 12.43, *p* = .0061). Notably, linear models (LM) and neural networks (NN) were the most common, with 9 and 6 studies, respectively, allowing for more confident interpretations. Linear models achieved the highest prediction rate (*r* = 0.784, 95% CI: 0.652–0.870), though this may be influenced by the smaller datasets typically used in these studies. These studies also exhibited higher heterogeneity ($\tau^2$ = 0.119) compared to other techniques. While there were only 3 studies involving tree-based model (TM), these performed well, achieving *r* = 0.750, 95% CI: 0.292–0.928), and the relatively poor performance of the neural network (NN) models represented in six studies (*r* = 0.473, 95% CI: 0.167–0.696) is difficult to explain without a deeper examination of the specific model architectures and the stimuli used in these studies.
+When analyzing the studies across the four modelling techniques used, the predictions differ significantly (*Q*(3) = 12.43, *p* = .0061). Notably, linear models (LM) and neural networks (NN) were the most common, with 9 and 6 studies, respectively, allowing for more confident interpretations. Linear models achieved the highest prediction rate (*r* = 0.784, 95% CI: 0.652–0.870), though this may be influenced by the smaller datasets typically used in these studies. These studies also exhibited higher heterogeneity ($\tau^2$ = 0.119) compared to other techniques. While there were only 3 studies involving tree-based model (TM), these performed well, achieving *r* = 0.750, 95% CI: 0.292–0.928), and the relatively poor performance of the neural network (NN) models represented in six studies (*r* = 0.473, 95% CI: 0.167–0.696) is difficult to explain without a deeper examination of the specific model architectures and the stimuli used in these studies.
 
 We also ran the sub-grouping analyses across stimulus genres (single vs mixed), finding no significant difference (*Q*(1) = 0.01, *p* = .9158). Both single-genre (*r* = 0.675 95% CI: 0.465, 0.813, *n* = 8) and multi-genre (*r* = 0.665, 95% CI: 0.508-0.779, *n* = 14) achieved similar results, although multi-genre studies exhibited slightly higher heterogeneity ($\tau^2$ = 0.167) than single-genre studies ($\tau^2$ = 0.137).
 
@@ -225,17 +221,17 @@ We also ran the sub-grouping analyses across stimulus genres (single vs mixed), 
 
 <!-- see this to ignore I\^2 and rely on prediction interval: https://onlinelibrary.wiley.com/doi/full/10.1002/jrsm.1678 -->
 
-These comparisons of sub-groupings may also be influenced by other factors, such as whether the study utilised predictive or explanatory modelling framework. To address this, we used the type of journal in which each study was published as a proxy indicator for predictive or explanatory modelling, where we classified studies published in psychology journals as explanatory and those published in engineering journals as predictive. Of the 22 regression studies, 13 were classified into predictive frameworks, yielding an average correlation of *r* = 0.656 (9% CI: 0.505–0.769). Studies with explanatory frameworks (9 in total) showed a similar overall correlation of *r* = 0.688 (95% CI: 0.468–0.827). No significant difference in model accuracy was observed between the two types of frameworks, *Q*(1) = 0.10, *p* = 0.748. More broadly, while the sub-groupings based on modelling techniques result in an uneven distribution of studies and observations, the two main sub-groupings presented in Table 2 highlight valuable differences in model performance across the studies. <!-- numbers in the text updated up to here, CA 20/2/2025 -->
+These comparisons of sub-groupings may also be influenced by other factors, such as whether the study utilised predictive or explanatory modelling framework. To address this, we used the type of journal in which each study was published as a proxy indicator for predictive or explanatory modelling, where we classified studies published in psychology journals as explanatory and those published in engineering journals as predictive. Of the 22 regression studies, 13 were classified into predictive frameworks, yielding an average correlation of *r* = 0.656 (95% CI: 0.505–0.769). Studies with explanatory frameworks (9 in total) showed a similar overall correlation of *r* = 0.688 (95% CI: 0.468–0.827). No significant difference in model accuracy was observed between the two types of frameworks, *Q*(1) = 0.10, *p* = 0.748. More broadly, while the sub-groupings based on modelling techniques result in an uneven distribution of studies and observations, the two main sub-groupings presented in Table 2 highlight valuable differences in model performance across the studies. <!-- numbers in the text updated up to here, CA 20/2/2025 -->
 
 <!-- DISCUSS: we don't report journal type of explain/predict differences, although we do some of these in arousal, TE 19/3/2025: Now added! -->
 
 ### Results for arousal
 
-Moving on the arousal, we carry out the same meta-analytical analysis applying the random-effects model to arousal. Table 3 describes the broad pattern of results in tabular format, and Figure 3 illustrates the spread and heterogeneity of all studies for arousal. The overall correlation across the studies using the best performing model out of each study (Max) is 0.809 (CI95% 0.740-0.860). If we examine all the models reported in each study, the correlation drops marginally, to 0.791 (CI95% 0.770-0.810), despite this analysis including about four times as many models as taking the best model out of each study. For arousal, even the baseline models seem to perform at a relatively high level.
+Moving on the arousal, we carry out the same meta-analytical analysis applying the random-effects model to arousal. Table 3 describes the broad pattern of results in tabular format, and Figure 3 illustrates the spread and heterogeneity of all studies for arousal. The overall correlation across the studies using the best performing model out of each study (Max) is 0.809 (95% CI: 0.740-0.860). If we examine all the models reported in each study, the correlation drops marginally, to 0.791 (95% CI: 0.770-0.810), despite this analysis including about four times as many models as taking the best model out of each study. For arousal, even the baseline models seem to perform at a relatively high level.
 
 #### Quantifying study heterogeneity
 
-For arousal, the indicators of heterogeneity are again high ($\tau^2$ = 0.141 and $I^2$=97.9%), which suggests that summary may be misleading. However, the analysis of asymmetry does not reveal significant issues (Eggers test, $\beta$ = 0.789 95%CI -4.87-6.45, *t* = 0.273, *p* = 0.788). If we remove the studies that are outside the 95%CI in heterogeneity, this leaves 13 studies in the summary where *r* = 0.826 (95%CI 0.806-0.845), $\tau^2$ = 0.0042 and $I^2$ = 76.8%. In other words, we observed no material difference to the results obtained with all 22 studies.
+For arousal, the indicators of heterogeneity are again high ($\tau^2$ = 0.141 and $I^2$=97.9%), which suggests that summary may be misleading. However, the analysis of asymmetry does not reveal significant issues (Eggers test, $\beta$ = 0.789 95% CI: -4.87-6.45, *t* = 0.273, *p* = 0.788). If we remove the studies that are outside the 95% CI in heterogeneity, this leaves 13 studies in the summary where *r* = 0.826 (95% CI: 0.806-0.845), $\tau^2$ = 0.0042 and $I^2$ = 76.8%. In other words, we observed no material difference to the results obtained with all 22 studies.
 
 Table 3. Meta-analytic diagnostic for all regression studies predicting arousal from audio.
 
@@ -269,7 +265,7 @@ Figure 3 presents a forest plot of the random-effects model of the best-performi
 
 #### Reporting splits
 
-The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (*Q*(2) = 5.20, *p* = .074) despite the differing means (*r* = 0.885 for studies with less than 30 features, *r* = 0.735 for 30 to 300 features, and *r* = 0.804 for studies utilising over 300 features). The differences in the techniques, however, show statistically significant variance between subgroups (*Q*(3) = 10.83, *p* = .0127). The Neural Nets (NN) achieve poor prediction of arousal (*r* = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. When other sub-groupings were explored, such as the type of framework utilised (predictive or explanatory), no significant differences were observed (*Q*(1) = 0.94, *p* = .333).
+The analysis of the subdivision of studies shows that there is no significant differences between the studies using different number of features (*Q*(2) = 5.20, *p* = .074) despite the differing means (*r* = 0.885 for studies with less than 30 features, *r* = 0.735 for 30 to 300 features, and *r* = 0.804 for studies utilising over 300 features). The differences in the techniques, however, show statistically significant variance between subgroups (*Q*(3) = 10.83, *p* = .0127). The Neural Nets (NN) achieve poor prediction of arousal (*r* = 0.660) in comparison to other techniques. The caveat of this subgroup analysis is the small number of observations for four techniques. We also found no difference between studies utilising predictive (*r* = 0.656, 95% CI: 0.505-0.769) or explanatory (*r* = 0.688, 95% CI: 0.468-0.828) frameworks (*Q*(1) = 0.94, *p* = .333).
 
 {{< include _figure3.qmd >}}
 
@@ -277,7 +273,7 @@ The analysis of the subdivision of studies shows that there is no significant di
 
 We next evaluated classification studies. The number of emotion classes predicted varied between studies, ranging from two to eight. Across studies, most operationalizations corresponded to either affective dimensions of the circumplex model or discrete emotion labels mapping to those dimensions [e.g., happy, sad, nervous, and calm and similar variants used in @agarwal2021an; @alvarez2023ri; @yeh2014po]. Despite common adoption of the circumplex quadrants, studies differed in modelling decisions: one study predicted quadrants in a multi-class problem [@panda2020no], whereas another predicted them in a series of binary classification tasks [@bhuvanakumar2023em]. Others predicted valence and arousal in separate tasks [@hu2022de; @zhang2016br], and some of the models analyzed only predicted arousal [e.g., all models in @zhang2017fe; the CART model in @zhang2016br]. Finally, some studies excluded specific quadrants [@hizlisoy2021mu] due to a lack of relevant stimuli, whereas others divided quadrants into multiple levels of valence and arousal [@nguyen2017an; @sorussa2020em]. Because only a few studies separately reported valence and arousal or quadrant classification, we averaged prediction success across them for each model to increase comparability with other studies.
 
-Figure 4 shows forest plot visualization from the random-effects model of the best-performing models in classification studies. $MCC$s vary across a wide range, reporting $MCC$s between 0.55 to 0.98. Table 4 indicates that using the best model from each study increases performance relative to all models ($MCC$ = 0.8684 95%CI: 0.7475-0.9336), yet slightly increases heterogeneity ($\tau^2$ = 0.3180, $I^2$ = 99.8%).
+Figure 4 shows forest plot visualization from the random-effects model of the best-performing models in classification studies. $MCC$s vary across a wide range, ranging from 0.55 to 0.98. Table 4 indicates that using the best model from each study increases performance relative to all models ($MCC$ = 0.868 95%CI: 0.748-0.934), yet slightly increases heterogeneity ($\tau^2$ = 0.318, $I^2$ = 99.8%).
 
 {{< include _figure4.qmd >}}
 
@@ -304,11 +300,11 @@ Table 4. Meta-analytic diagnostic for all classification studies predicting emot
 
 ### Quantifying study heterogeneity
 
-Accounting for outliers among the classifications results removes 6 studies, affecting both performance ($MCC$ = 0.8941, 95%CI: 0.8282-0.9356) and heterogeneity scores ($\tau^2$ = 0.0569, $I^2$ = 97.7%). However, we observed no significant issues in analysis for asymmetry ($\beta$ = -19.769, 95%CI: -39.29--0.24). After aggregating across dimensions, some of the best models included only classified arousal [@zhang2016br; @zhang2017fe]. To assess these studies' impact on overall performance, we conducted the same meta-analytic procedure after excluding them. Classification accuracy ($MCC$ = 0.8758, 95%CI: 0.7235-0.9468) does not change notably, nor does the rank order of model classes in terms of performance. Consequently, we report on all 12 in subsequent analyses.
+Accounting for outliers among the classifications results removes 6 studies, affecting both performance ($MCC$ = 0.894, 95% CI: 0.828-0.936) and heterogeneity scores ($\tau^2$ = 0.057, $I^2$ = 97.7%). However, we observed no significant issues in analysis for asymmetry ($\beta$ = -19.769, 95% CI: -39.29-0.24). After aggregating across dimensions, we found that some studies with the best results only involved arousal classification [@zhang2016br; @zhang2017fe]. To assess their impact on interpretations, we evaluated how their exclusion affected average classification accuracy. These analyses revealed that accuracy ($MCC$ = 0.8758, 95%CI: 0.7235-0.9468) did not change significantly, nor did the rank order of model classes in terms of performance. Consequently, we report on all 12 in subsequent analyses.
 
 ### Reporting splits
 
-The number of features (as classified into under 30, between 30 and 300, and above 300 features; see Table 3 for actual ranges) analyzed does not significantly impact results (*Q*(2) = 3.91, *p* = 0.1419), despite $MCC$s showing average differences according to the number of features (\< 30 F: $MCC$ = 0.9293; 30-300 F: $MCC$ = 0.8458; \>300 F: $MCC$ = 0.7754). Similarly, the class of model did not differ significantly (*Q*(3) = 4.22, *p* = 0.239) despite neural networks attaining highest average performance ($MCC$ = 0.9307), followed by SVMs ($MCC$ = 0.870) and tree-based methods ($MCC$ = 0.854), then linear methods ($MCC$ = 0.728). Finally, neither single- vs. multigenre studies (*Q*(1) = 0.12, *p* = 0.7324), nor binary vs. multi-class models (*Q*(1) = 0.03, *p* = 0.8694) differed significantly. All classification studies were published in engineering journals and thus represent predictive framework in our earlier typology.
+Analyzing subgroups revealed that the number of features (as classified into under 30, between 30 and 300, and above 300 features; see Table 3 for actual ranges) does not significantly impact results (*Q*(2) = 3.91, *p* = 0.1419), despite $MCC$s differing on average (\< 30 F: $MCC$ = 0.929; 30-300 F: $MCC$ = 0.846; \>300 F: $MCC$ = 0.775). Similarly, model classes did not differ significantly (*Q*(3) = 4.22, *p* = 0.239) although neural networks attained higher $MCCs$ (0.9307), followed by SVMs (0.870), tree-based methods (0.854), then linear methods (0.728). Finally, neither single vs. multigenre (*Q*(1) = 0.12, *p* = 0.732), nor binary vs. multi-class models (*Q*(1) = 0.03, *p* = 0.869) differed significantly. All classification studies were published in engineering journals and thus represent predictive framework in our earlier typology.
 
 ### Model success across concepts, model types and feature counts
 
@@ -331,15 +327,15 @@ CA: It looks like we've accounted for genre (single- vs. multi-genre), complexit
 
 # Discussion and conclusions
 
-Research on Music Emotion Recognition has steadily increased in popularity since the early 2000s, with technological advancements facilitating sharing of data sets, analysis tools, and music stimuli. Public forums like the Music Information Retrieval Exchange (MIREX) have facilitated collaborations between computer scientists, musicologists, and psychologists alike -- spurring improvements in performance. Despite the increasing complexity of models and datasets, no existing study has rigorously compared the overall success of Music Emotion Recognition research using standardized metrics, nor has there been an analysis of the relative merits of the model techniques and feature sets employed. This study presents the first meta-analysis of music emotion recognition.
+Research on Music Emotion Recognition has steadily increased in popularity since the early 2000s, with technological advancements facilitating sharing of data sets, analysis tools, and music stimuli. Public forums like the Music Information Retrieval Exchange (MIREX) have facilitated collaborations between computer scientists, musicologists, and psychologists alike -- spurring improvements in performance. Despite the increasing complexity of models and datasets, no existing study has rigorously compared the overall success of Music Emotion Recognition research using standardized metrics, nor has there been an analysis of the relative merits of the model techniques and feature sets employed. This study presents the first meta-analysis of music emotion recognition, breaking down accuracy in terms of the model types, number of features, and empirical frameworks employed.
 
 <!-- Concise summary of what we did and found -->
 
-We initially identified 96 studies involving MER models, but narrowed our selection to 34 after filtering studies to ensure consistent quality, reporting standards, and a dedicated focus on music. From these studies, we encoded accuracy scores for 290 models, with 204 related to regression and 86 to classification. Comparing the most accurate model in each study revealed reasonably accurate prediction of valence (*r* = 0.67 \[0.56, 0.76\]), and arousal (*r* = 0.81 \[0.74, 0.86\]) in regression studies. For both affective dimensions of the circumplex model, linear methods (valence *r* = 0.78, arousal *r* = 0.88) and tree-based models (valence *r* = 0.75, arousal *r* = 0.81) outperformed neural networks (valence = 0.47, arousal = 0.66) and support vector machines (SVMs) (valence *r* = 0.58, arousal *r* = 0.79). In contrast, neural networks performed most accurately in classification studies ($MCC$ = 0.93), followed by SVMs ($MCC$ = 0.87) and tree-based models ($MCC$ = 0.85). Despite the high overall success of the research in this topic, the models exhibited several differences relating to (i) the scale and quantity of data sets employed, (ii) feature extraction methods, (iii) the number and types of features and reduction methods used, (iv) the actual modelling architecture, and (v) how model outcomes are cross-validated.
+We initially identified 96 studies involving MER models, but narrowed our selection to 34 after filtering studies to ensure consistent quality, reporting standards, and a specific focus on predicting emotions using music features. From these studies, we encoded accuracy scores for 290 models, with 204 related to regression and 86 to classification. Comparing the most accurate model in each study revealed reasonably accurate prediction of valence (*r* = 0.669 \[0.560, 0.755\]), and arousal (*r* = 0.809 \[0.740, 0.860\]) in regression studies. For both affective dimensions of the circumplex model, linear methods (valence *r* = 0.784, arousal *r* = 0.882) and tree-based models (valence *r* = 0.750, arousal *r* = 0.809) outperformed support vector machines (SVMs) (valence *r* = 0.539, arousal *r* = 0.796) and neural networks (valence = 0.473, arousal = 0.660). In contrast, neural networks performed most accurately in classification studies ($MCC$ = 0.931), followed by SVMs ($MCC$ = 0.870) and tree-based models ($MCC$ = 0.853). Despite the high overall success of the research in this topic, the models exhibited several differences relating to (i) the scale and quantity of data sets employed, (ii) feature extraction methods, (iii) the number and types of features and reduction methods used, (iv) the actual modelling architecture, and (v) how model outcomes are cross-validated.
 
 ## Improvements to predictive accuracy
 
-The results of the meta-analysis offer several important insights. First, compared to a 2013 report by @barthet2013, the glass ceiling for valence has risen from *r* = 0.51 to 0.67.[^2] Conversely, predictive accuracy for arousal has shown no improvement (reported already in 2013 at *r* = 0.83). For classification, studies reached variable classification rates from 0.497 using *F~1~* score [@sanden2011empirical] to 79% average precision [@trohidis2008multi] in the past, whereas now the accuracy is generally notably better, here $MCC$ = 0.87, albeit the differences in metrics.
+The results of the meta-analysis offer several important insights. First, compared to a 2013 report by @barthet2013, the glass ceiling for valence has risen from *r* = 0.51 to 0.67.[^2] Conversely, predictive accuracy for arousal has shown no improvement (reported already in 2013 at *r* = 0.83). For classification, studies reached variable classification rates from 0.497 using *F~1~* score [@sanden2011empirical] to 79% average precision [@trohidis2008multi] in the past, whereas prediction rates have improved considerably, here $MCC$ = 0.87, albeit the differences in metrics.
 
 [^2]: Values reported as $R^2$ in original study.
 
@@ -367,7 +363,7 @@ TE: Or if we submit the meta-analysis soon and create a more pragmatic breakdown
 
 ## Recommendations for future MER studies
 
-Broadly speaking, the present study revealed an uncomfortably large variation in overall quality control and reporting in MER studies. In many cases, the reporting was insufficient to determine the features used in the models or their sources. Additionally, a significant number of studies had to be discarded due to a lack of information about the data, model architectures, or outcome measures. We summarize these issues below as recommendations for improving (1) reporting and transparency, (2) feature definition, (3) dataset scale and content, and (4) the selection of emotion frameworks.
+Broadly speaking, the present study revealed uncomfortably large variability in overall quality control and reporting in MER studies. In many cases, the reporting was insufficient to determine the features used in the models or their sources. Additionally, a significant number of studies had to be discarded due to a lack of information about the data, model architectures, or outcome measures. We summarize these issues below as recommendations for improving (1) reporting and transparency, (2) feature definition, (3) dataset scale and content, and (4) the selection of emotion frameworks.
 
 <!-- ### Reporting and transparency -->
 
@@ -381,7 +377,7 @@ It would be also highly beneficial to share models and features transparently. I
 
 <!-- ### Feature definition/validations -->
 
-One of the crucial aspects of modelling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data . For reference, the size of the datasets in MER are currently comparable to dataset sizes for modelling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. Datasets of these magnitudes seem to be required for appropriate utilisation of deep learning algorithms [@alwosheel2018; @sun2017revisiting], which may explain the modest results observed in the music emotion recognition studies.
+One of the crucial aspects of modelling is the choice of features, their quantity, and their validation. In the present materials, we observe a continuum defined by two extremes: one approach relies on domain knowledge, starting with a limited number of features that are assumed to be perceptually relevant, while the other employs a large number of features, allowing the model to determine which are most relevant for prediction. The former is typically favored in music psychology studies, whereas the latter is more common in engineering and machine learning fields. Our results suggest that the domain knowledge-driven approach leads to the highest model accuracy across all studies and techniques. However, as our sample includes studies from the past 10 years, it is important to note that deep learning models have only gained prominence in this field since 2021. Consequently, it is too early to generalize that models based on domain knowledge, with a limited number of features and classical techniques, will continue to outperform machine learning approaches that utilize a large (300+) feature sets. We believe that the relatively modest size of datasets available so far has prevented deep learning approaches from fully leveraging their potential to learn generalizable patterns in the data. For reference, the size of the datasets in MER are currently comparable to dataset sizes for modelling facial expressions (median N=502, @krumhuber2017) and speech expressions (median of 1287, @hashem2023). However, annotated datasets for visual scenes and objects tend to be much larger, often exceeding 100,000 annotated examples [@deng2009imagenet; @krishna2017visual]. Datasets of these magnitudes seem to be required for appropriate utilisation of deep learning algorithms [@alwosheel2018; @sun2017revisiting], which may explain the modest results observed in the music emotion recognition studies.
 
 <!-- ### Validation -->
 
@@ -389,11 +385,11 @@ An encouraging finding is that \~94% of the studies analyzed here reported some 
 
 <!-- Western bias -->
 
-At present, the majority of the datasets are Western pop, which represent only a fraction of the musical styles consumed globally. Also, the annotators representing the Global North dominate the studies at the moment, with some exceptions [@gomez-canon2023; @zhangPMEmo2018]. This lack of diversity may contribute the success of the task but presents a significant limitation in our understanding of MER more broadly [@bornDiversifyingMIRKnowledge2020].
+At present, the majority of the datasets are Western pop, which represent only a fraction of the musical styles consumed globally. Also, the annotators representing the Global North dominate the studies at the moment, with some exceptions [@gomez-canon2023; @zhangPMEmo2018]. This lack of diversity may contribute the success of the task but presents a significant limitation in our understanding of MER more broadly [@bornDiversifyingMIRKnowledge2020]. Greater exploration of multi-genre MER [e.g., @griffiths2021am], and cross-cultural applications [@wang2022cr; wang2021ac; @hu2017cr; @agarwal2021an] will provide an important step toward establishing more generalizable models.
 
 <!-- ### Emotion frameworks chosen -->
 
-Finally, we note that the relevance of the emotion frameworks used in MER is not always explicitly discussed. The majority of studies rely either on valence and arousal or some combination of basic emotion categories. However, these frameworks may have limited usefulness for some practical applications that aim to capture experiences with music that are more aligned with models of music-induced emotions such as GEMS by @zentner2008emotions or AESTHEMOS [@schindler2017me], or what emotions music are shown to be able to express [@eerola2025what], or what are assumed to be worthwhile clusters of concepts (moods, emotions, tags) from crowdsourced, non-theory driven data [@saari_et_al_2015].
+Finally, we note that the relevance of the emotion frameworks used in MER is not always explicitly discussed. The majority of studies rely either on valence and arousal or some combination of basic emotion categories. However, these frameworks may have limited usefulness in practical applications that aim to capture the diversity of emotion experiences with music. For example, some experiences align with models of music-induced emotions, such as GEMS by @zentner2008emotions or AESTHEMOS [@schindler2017me], whereas other explore what emotions can be expressed through music [@eerola2025what], or what are assumed to be worthwhile clusters of concepts (moods, emotions, tags) from crowdsourced, non-theory driven data [@saari_et_al_2015]. Understanding the limitations of different emotion taxonomies can also help improve modelling practices. For example, some scholars have explored treating MER as a circular regression problem, which can help overcome practical challenges such as the difficulty of relating to the abstract dimensions of valence and arousal, as well as the modelling assumptions required when translating a circular affective space to regression problems [@dufour2021us].
 
 The present meta-analysis demonstrates that significant progress has been made toward developing accurate and scalable MER models over the past decade. Future efforts should prioritize feature validation, standardized reporting, the construction of larger and more diverse datasets, and the transparent sharing of research materials to ensure further consistent improvements in MER.
 
